--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "sass": "^1.42.1",
-    "uuidv4": "^6.2.12"
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.13"
