add mongoose and add env / config variable

--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,7 @@
 APP_PORT = 3000
 GAME_DURATION = 120000
 GAME_PAIR = 18
+MONGO_USER = oclock
+MONGO_PASS = yourPassword
+MONGO_HOST = MongoHost
+MONGO_DATABASE_NAME = yourDBname
