--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "http-errors": "^1.7.2",
     "mongoose": "^6.0.7",
+    "morgan": "^1.10.0",
+    "pug": "^3.0.2",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
